Remove shared mutable project state.